--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <table cellspacing="20">
       <tr>
-        <td><img src="nico.png" alt="nico profile picture"></td>
+        <td><img src="images/nico.png" alt="nico profile picture"></td>
         <td><h1>Nico Gaz</h1>
         <p><em> I am a <h4> trade agent.<em><p>
         <p>I love hiking, surfing and snowboarding.</p></td>
